--- a/package.json
+++ b/package.json
@@ -12,13 +12,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.0.0",
+    "@angular/cdk": "^10.2.7",
     "@angular/common": "~10.0.0",
     "@angular/compiler": "~10.0.0",
     "@angular/core": "~10.0.0",
+    "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~10.0.0",
+    "@angular/material": "^10.2.7",
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "angular-material": "^1.2.1",
+    "ngx-page-scroll": "^7.0.3",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
