--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~10.0.0",
     "@angular/compiler": "~10.0.0",
     "@angular/core": "~10.0.0",
+    "@angular/fire": "^6.1.1",
     "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~10.0.0",
     "@angular/material": "^10.2.7",
@@ -27,7 +28,8 @@
     "ngx-page-scroll": "^7.0.3",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.10.3",
+    "firebase": "^7.0.0 || ^8.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.0",
@@ -47,6 +49,12 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "typescript": "~3.9.5",
+    "@angular-devkit/architect": ">= 0.900 < 0.1200",
+    "firebase-tools": "^8.0.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
+    "open": "^7.0.3"
   }
 }
