--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "firebase": "^7.0.0 || ^8.0.0",
     "font-awesome": "^4.7.0",
     "ngx-page-scroll": "^7.0.3",
+    "ngx-page-scroll-core": "^7.0.3",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
