--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,7 @@
                 "build": {
                     "builder": "@angular-devkit/build-angular:browser",
                     "options": {
-                        "outputPath": "dist/neet-corner",
+                        "outputPath": "dist/neet-corner/browser",
                         "index": "src/index.html",
                         "main": "src/main.ts",
                         "polyfills": "src/polyfills.ts",
@@ -103,7 +103,8 @@
                         "tsConfig": [
                             "tsconfig.app.json",
                             "tsconfig.spec.json",
-                            "e2e/tsconfig.json"
+                            "e2e/tsconfig.json",
+                            "tsconfig.server.json"
                         ],
                         "exclude": [
                             "**/node_modules/**"
@@ -125,6 +126,53 @@
                 "deploy": {
                     "builder": "@angular/fire:deploy",
                     "options": {}
+                },
+                "server": {
+                    "builder": "@angular-devkit/build-angular:server",
+                    "options": {
+                        "outputPath": "dist/neet-corner/server",
+                        "main": "server.ts",
+                        "tsConfig": "tsconfig.server.json"
+                    },
+                    "configurations": {
+                        "production": {
+                            "outputHashing": "media",
+                            "fileReplacements": [
+                                {
+                                    "replace": "src/environments/environment.ts",
+                                    "with": "src/environments/environment.prod.ts"
+                                }
+                            ],
+                            "sourceMap": false,
+                            "optimization": true
+                        }
+                    }
+                },
+                "serve-ssr": {
+                    "builder": "@nguniversal/builders:ssr-dev-server",
+                    "options": {
+                        "browserTarget": "neet-corner:build",
+                        "serverTarget": "neet-corner:server"
+                    },
+                    "configurations": {
+                        "production": {
+                            "browserTarget": "neet-corner:build:production",
+                            "serverTarget": "neet-corner:server:production"
+                        }
+                    }
+                },
+                "prerender": {
+                    "builder": "@nguniversal/builders:prerender",
+                    "options": {
+                        "browserTarget": "neet-corner:build:production",
+                        "serverTarget": "neet-corner:server:production",
+                        "routes": [
+                            "/"
+                        ]
+                    },
+                    "configurations": {
+                        "production": {}
+                    }
                 }
             }
         }
