--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run neet-corner:serve-ssr",
+    "serve:ssr": "node dist/neet-corner/server/main.js",
+    "build:ssr": "ng build --prod && ng run neet-corner:server:production",
+    "prerender": "ng run neet-corner:prerender"
   },
   "private": true,
   "dependencies": {
@@ -22,13 +26,16 @@
     "@angular/material": "^10.2.7",
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
+    "@angular/platform-server": "~10.0.0",
     "@angular/router": "~10.0.0",
     "@fortawesome/angular-fontawesome": "^0.8.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@nguniversal/express-engine": "^10.0.2",
     "angular-material": "^1.2.1",
+    "express": "^4.15.2",
     "firebase": "^7.0.0 || ^8.0.0",
     "font-awesome": "^4.7.0",
     "ngx-page-scroll": "^7.0.3",
@@ -41,6 +48,8 @@
     "@angular-devkit/build-angular": "~0.1000.0",
     "@angular/cli": "~10.0.0",
     "@angular/compiler-cli": "~10.0.0",
+    "@nguniversal/builders": "^10.0.2",
+    "@types/express": "^4.17.0",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
